# hello-kni

./: .gitignore  .gitmodules  build.gradle  settings.gradle.kts
breakpad-build/: build.gradle.kts
breakpad-build/src/main/cpp/: CMakeLists.txt  breakpad.cpp  breakpad.h  build_ios.sh  isDebuggerActive.cpp  isDebuggerActive.h
lib-localCTP/: build.gradle.kts  build_android.sh  build_ios.sh
lib-localCTP/src/main/cpp/: CMakeLists.txt
lib-localCTP/src/main/cpp/LocalCTP/: LeeDateTime.cpp  LocalCTP.cpp  LocalTraderApi.cpp  LocalTraderApi.h  ctpStatus.h  stdafx.cpp
lib-localCTP/src/main/cpp/LocalCTP/ctp_file/current/: ThostFtdcTraderApi.h
lib-localCTP/src/main/cpp/TestLocalCTP/: TestLocalCTP.cpp  TestLocalCTP.h
nativeLib/: build.gradle.kts
nativeLib/src/nativeInterop/cinterop/: bmpformat.def
nativeunittest/: build.gradle.kts
nativeunittest/src/androidTest/java/com/zero/nativeunittest/: ExampleInstrumentedTest.kt
nativeunittest/src/main/cpp/: CMakeLists.txt  nativeunittest.cpp
nativeunittest/src/main/java/com/zero/nativeunittest/: NativeLib.kt
nativeunittest/src/test/java/com/zero/nativeunittest/: ExampleUnitTest.kt
protobuf-build/: build.gradle.kts  protobuf-build.podspec  protobuf_build.podspec
protobuf-build/src/androidMain/kotlin/com/zero/protobuf_build/: Platform.android.kt
protobuf-build/src/commonMain/kotlin/com/zero/protobuf_build/: Greeting.kt  Platform.kt
protobuf-build/src/iosMain/kotlin/com/zero/protobuf_build/: Platform.ios.kt
protobuf-build/src/main/proto/: Person.proto
